[package]
name = "ordermap"
edition = "2021"
version = "0.5.10"
documentation = "https://docs.rs/ordermap/"
repository = "https://github.com/indexmap-rs/ordermap"
license = "Apache-2.0 OR MIT"
description = "A hash table with consistent order and fast iteration."
keywords = ["hashmap", "no_std"]
categories = ["data-structures", "no-std"]
rust-version = "1.63"

[lib]
bench = false

[dependencies]
indexmap = { version = "2.11.1", default-features = false }

arbitrary = { version = "1.0", optional = true, default-features = false }
quickcheck = { version = "1.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
borsh = { version = "1.5.6", optional = true, default-features = false }
rayon = { version = "1.9", optional = true }
sval = { version = "2", optional = true, default-features = false }

[dev-dependencies]
itertools = "0.14"
fastrand = { version = "2", default-features = false }
quickcheck = { version = "1.0", default-features = false }
fnv = "1.0"
serde_derive = "1.0"

[features]
default = ["std"]
std = ["indexmap/std"]

arbitrary = ["dep:arbitrary", "indexmap/arbitrary"]
quickcheck = ["dep:quickcheck", "indexmap/quickcheck"]
rayon = ["dep:rayon", "indexmap/rayon"]
serde = ["dep:serde", "indexmap/serde"]
sval = ["dep:sval", "indexmap/sval"]
borsh = ["dep:borsh", "borsh/indexmap"]

[profile.bench]
debug = true

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["arbitrary", "quickcheck", "serde", "borsh", "rayon", "sval"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["test-nostd", "test-serde", "test-sval"]

[lints.clippy]
style = "allow"
